--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,12 +8,12 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="float-start navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Recipes
+                <a class="nav-link" href="#" (click)="onSelect('recipe')">Recipes
                     <span class="sr-only">(current)</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Shopping List</a>
+                <a class="nav-link" href="#" (click)="onSelect('shopping-list')">Shopping List</a>
             </li>
         </ul>
         <ul class="float-end navbar-nav">
