--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,16 +4,16 @@
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
-                    <input type="text" id="name" class="form-control">
+                    <input type="text" id="name" class="form-control" #nameInput>
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="amount">Amount</label>
-                    <input type="number" id="amount" class="form-control">
+                    <input type="number" id="amount" class="form-control" #amountInput>
                 </div>
             </div>
             <div class="row pt-3 ps-3">
                 <div class="col-xs-12">
-                    <button type="submit" class="btn btn-success me-2">Add</button>
+                    <button type="submit" class="btn btn-success me-2" (click)="onAddItem()">Add</button>
                     <button type="button" class="btn btn-danger me-2">Remove</button>
                     <button type="button" class="btn btn-warning me-2">Clear</button>
                 </div>
